<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bowling"
    android:orientation="vertical"
    tools:context="com.example.android.bowling.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/titleText"
            android:layout_weight="3"
            android:text="@string/title" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/null_margin_padding"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/small_margin_padding">

            <TextView
                style="@style/round_TextField"
                android:layout_weight="1"
                android:text="@string/round" />

            <TextView
                android:id="@+id/rounds"
                style="@style/roundCount_Field"
                android:layout_weight="1"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/null_margin_padding"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/playerName_Field"
                android:layout_weight="4"
                android:text="@string/player_1_name" />

            <TextView
                style="@style/playerName_Field"
                android:layout_weight="4"
                android:text="@string/player_2_name" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/null_margin_padding"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_1_score"
                style="@style/mainScoreDisplay"
                android:layout_weight="1"
                android:text="" />

            <TextView
                android:id="@+id/player_2_score"
                style="@style/mainScoreDisplay"
                android:layout_weight="1"
                android:text="" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/null_margin_padding"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/strikesSpares_TextField"
                android:layout_weight="2"
                android:text="@string/strikesText" />

            <TextView
                android:id="@+id/player_1_strikes"
                style="@style/strikesSpares_CountField"
                android:layout_weight="1"
                android:text="" />

            <TextView
                style="@style/strikesSpares_TextField"
                android:layout_weight="2"
                android:text="@string/strikesText" />

            <TextView
                android:id="@+id/player_2_strikes"
                style="@style/strikesSpares_CountField"
                android:layout_weight="1"
                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/null_margin_padding"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                style="@style/strikesSpares_TextField"
                android:layout_weight="2"
                android:text="@string/sparesText" />

            <TextView
                android:id="@+id/player_1_spares"
                style="@style/strikesSpares_CountField"
                android:layout_weight="1"
                android:text="" />

            <TextView
                style="@style/strikesSpares_TextField"
                android:layout_weight="2"
                android:text="@string/sparesText" />

            <TextView
                android:id="@+id/player_2_spares"
                style="@style/strikesSpares_CountField"
                android:layout_weight="1"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            style="@style/flavorTextBox"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header"
                style="@style/header_flavorBox"
                android:layout_weight="1"
                android:text="" />

            <TextView
                android:id="@+id/flavor"
                style="@style/flavor_flavorBox"
                android:layout_weight="1"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/null_margin_padding"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                style="@style/redButton"
                android:layout_weight="1"
                android:onClick="player1roll"
                android:text="@string/player_1_roll" />

            <Button
                style="@style/redButton"
                android:layout_weight="1"
                android:onClick="reset"
                android:text="@string/reset" />

            <Button
                style="@style/redButton"
                android:layout_weight="1"
                android:onClick="player2roll"
                android:text="@string/player_2_roll" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
